--- a/Shop_QuanAo/Shop_QuanAo/bin/Shop_QuanAo.dll.config
+++ b/Shop_QuanAo/Shop_QuanAo/bin/Shop_QuanAo.dll.config
@@ -84,14 +84,14 @@
 		<!--<add name="ShopQuanAoContext"
 			 connectionString="Server=LAPTOP-1HDBI9F6\SQLEXPRESS;Database=ShopQuanAo;Trusted_Connection=True;"
 			 providerName="System.Data.SqlClient" />-->
-		<!--<add name="ShopQuanAoContext" connectionString="Data Source=TienDat;Initial Catalog=ShopQuanAo;Integrated Security=True" 
-			 providerName="System.Data.SqlClient" />-->
+		<add name="ShopQuanAoContext" connectionString="Data Source=TienDat;Initial Catalog=ShopQuanAo;Integrated Security=True" 
+			 providerName="System.Data.SqlClient" />
 		<!--<add name="ShopQuanAoContext"
 			connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ShopQuanAo.mdf;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" "
 			providerName="System.Data.SqlClient" />-->
-		<add name="ShopQuanAoContext"
+		<!--<add name="ShopQuanAoContext"
 			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ShopQuanAO.mdf;Integrated Security=True" 
-			 providerName="System.Data.SqlClient"/>
+			 providerName="System.Data.SqlClient"/>-->
 	</connectionStrings>
 	
 
